--- a/.github/workflows/self-hosted-runner.yml
+++ b/.github/workflows/self-hosted-runner.yml
@@ -2,7 +2,7 @@ name: self hosted runner
 on: workflow_dispatch
 jobs:
   build: 
-    runs-on: build
+    runs-on: self-hosted
     steps:
       - name: checkout
         uses: actions/checkout@v4.2.2
