--- a/.github/workflows/self-hosted-runner.yml
+++ b/.github/workflows/self-hosted-runner.yml
@@ -7,7 +7,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4.2.2
       - name: list files and folders
-        run: ls
+        run: ls -a
       - name: install nginx
         run: sudo apt install nginx -y
       - name: remove default page
